enhanced faq with icons and smooth scrolling

--- a/src/Components/FAQ/accordian.css
+++ b/src/Components/FAQ/accordian.css
@@ -8,19 +8,35 @@ h2 {
     
 }
 
-h3 {
-    padding: 10px;
-}
-
 .question {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: #212EA0;
     border: 3px solid whitesmoke;
     color: azure;
     border-radius: 10px;
     padding-top: 15px;
+    padding-right: 20px;
     padding-bottom: 15px;
     padding-left: 10px;
 } 
+
+.accordian .question:hover {
+    background-color: #000c7c;
+}
+
+.arrow-icon {
+    transition: transform 0.5s ease-in-out;
+}
+
+.active {
+    transform: rotate(-180deg);
+}
+
+h3 {
+    padding: 10px;
+}
 
 .item {
     padding: 10px;
@@ -28,10 +44,14 @@ h3 {
 
 .content {
     justify-content: center;
-    padding: 20px;
-    border: 3px solid black;
+    box-sizing: content-box;
+    /* padding: 20px; */
+    /* border: 3px solid black; */
     border-radius: 10px;
-    margin: 10px;
+    /* margin: 10px; */
     font-family: "Outfit", sans-serif;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-in-out, padding 0.5s ease-in-out, margin 0.5s ease-in-out, border 0.5s ease-in-out;
 }
 
