minor change in accordian.css

--- a/src/Components/FAQ/accordian.css
+++ b/src/Components/FAQ/accordian.css
@@ -30,7 +30,7 @@ h2 {
     transition: transform 0.5s ease-in-out;
 }
 
-.active-faq {
+.accordian .active-faq {
     transform: rotate(-180deg);
 }
 
