Added Pages for Terms and Conditions, Vision & Mission, How It Works

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 nav{
     width: 100%;
-    /* background: #333; */
+     background: rgba(0, 0, 128,.6);
     color: #fff;
     padding: 4px 0;
     position: fixed;
