Added Dark Mode Toggle button
Signed-off-by: Hemashree M S <hemashree21.msh@gmail.com>

--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,12 @@
     justify-content: center;
     overflow-x: hidden;
 }
+
+#light {
+    background-color: white;
+}
+
+#dark {
+    background-color: black;
+    color: white;
+}
