--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -72,7 +72,7 @@ margin-bottom: 130px;
   left: 0;
 }
 .footer-col a:hover {
-  color: #8d8de1;
+  /* color: #8d8de1; */
   text-decoration: none;
   transform: scale(1.1); 
 
@@ -87,103 +87,75 @@ margin-bottom: 130px;
   height: 70px; 
 }
 .footer-col a:hover i {
-  color: #8d8de1;
+  /* color: #8d8de1; */
   /* transform: scale(1.1); */
   font-size: 20px;
 }
 
-@media (min-width:344px) and (max-width:522px){
-.footer-col{
-   width:100%;  
- } 
- .needHelpCss{
-   margin-bottom:0px;
- }
-.companyCss{
-   margin-top: 30px;
-   margin-bottom:0px;
-}
-.moreInfoCss{
-font-size: 16px;
-margin-top: 30px;
-margin-bottom:0px;
-}
-.socialSitesCss{
-  margin-top:30px;
-  margin-bottom:0px;
-}
-.copyright {
-  font-size: 14px;
-  margin-top: 20px; 
-  display: flex;
-  justify-content: left;
-}
-}
-
 @media (min-width:523px) and (max-width:846px){
-.footer-col{
-   width:50%;
- } 
- .needHelpCss{
-   margin-bottom:5px;   
- }
-.companyCss{
- margin-bottom:0px;
- margin-top:0px;
-}
-.moreInfoCss{
-font-size: 16px;
-margin-top: 20px;
-}
-.socialSitesCss{
-  margin-top:20px;
-  }
-.copyright {
-  font-size: 14px;
-  margin-top: 10px; 
-  display: flex;
-  justify-content: center;
-}
-}
-
-@media (min-width:523px) and (max-width:596px) {
-.needHelpCss{
-   font-size: 14px;
- }
- .companyCss{
-  font-size: 14px;
-  margin-top: 0px;
- }
- .moreInfoCss{
-  font-size: 14px;
- }
- .socialSitesCss{
-  font-size: 14px;
- }
-}
-
-@media (min-width:850px) and (max-width:1107px){
   .footer-col{
-   width:30%;  
- } 
-.needHelpCss{
-   font-size: 14px;
-   margin-bottom: 65px;
- }
- .companyCss{
-  font-size: 14px;
-  margin-bottom:60px;
- }
- .moreInfoCss{
-  font-size: 14px;
-  margin-bottom: 90px;
- }
+     width:50%;
+   } 
+   .needHelpCss{
+     margin-bottom:5px;   
+   }
+  .companyCss{
+   margin-bottom:0px;
+   margin-top:0px;
+  }
+  .moreInfoCss{
+  font-size: 16px;
+  margin-top: 20px;
+  }
   .socialSitesCss{
-  font-size: 14px;
-  margin-top:0px;
-  margin-bottom: 20px;
+    margin-top:20px;
+    }
+  .copyright {
+    font-size: 14px;
+    margin-top: 10px; 
+    display: flex;
+    justify-content: center;
   }
-  .copyright{
+  }
+  
+  @media (min-width:523px) and (max-width:596px) {
+  .needHelpCss{
+     font-size: 14px;
+   }
+   .companyCss{
+    font-size: 14px;
     margin-top: 0px;
+   }
+   .moreInfoCss{
+    font-size: 14px;
+   }
+   .socialSitesCss{
+    font-size: 14px;
+   }
   }
-}
+  
+  @media (min-width:850px) and (max-width:1107px){
+    .footer-col{
+     width:30%;  
+   } 
+  .needHelpCss{
+     font-size: 14px;
+     margin-bottom: 65px;
+   }
+   .companyCss{
+    font-size: 14px;
+    margin-bottom:60px;
+   }
+   .moreInfoCss{
+    font-size: 14px;
+    margin-bottom: 90px;
+   }
+    .socialSitesCss{
+    font-size: 14px;
+    margin-top:0px;
+    margin-bottom: 20px;
+    }
+    .copyright{
+      margin-top: 0px;
+    }
+  }
