--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 nav{
   width: 100%;
-   background: rgba(0, 0, 128,.6);
+   /* background: rgba(0, 0, 128,.6); */
   color: #fff;
   padding: 4px 0;
   position: fixed;
@@ -15,21 +15,19 @@ nav{
 .logo{
   width: 80px;
 }
-.logIn{
-/*background-color: rgb(145, 99, 187);*/
-background-color: transparent;
-}
-.logIn:hover{
-background-color: rgb(109, 65, 151);
-}
+
 nav ul li{
   display: inline-block;
   list-style: none;
   margin: 5px 20px;
   font-size: 16px;
+  background-color: #212EA0;
+  padding: 10px 15px;
+  border-radius: 7px;
 }
 nav ul li a.active{
   color: lightgoldenrodyellow;
+  text-decoration: none;
 }
 .dark-nav{
   background: #212EA0;
@@ -39,8 +37,19 @@ nav ul li a.active{
 .menu-icon{
   display: none;
 }
+nav ul li button{
+  background-color: #212EA0;
+  padding: 2px;
+}
+nav ul li button:hover{
+  background-color: #212EA0;
 
-
+}
+nav ul li:hover{
+  /* transition: transform 0.3s ease-in-out; */
+  background-color: #212EA0;
+  transform: scale(1.2);
+}
 /* Media query for tablets */
 @media(max-width: 1000px){
   .logo{
@@ -65,16 +74,16 @@ nav ul li {
   .logo {
     width: 50px;
   }
-  nav ul {
-    position: absolute; /* Change position to absolute */
-    top: 60px; /* Adjust top position */
-    right: 20px; /* Adjust right position */
-    background: #212ea0;
-    z-index: 10; /* Increase z-index to show above other content */
-    width: 200px;
-    padding-top: 20px; /* Adjust padding-top */
-    transition: 0.5s;
-  }
+  /* nav ul {
+    /* position: absolute; Change position to absolute */
+    /* top: 60px; Adjust top position */
+    /* right: 20px; Adjust right position */
+    /* background: #212ea0; */
+    /* z-index: 10; Increase z-index to show above other content */
+    /* width: 200px; */
+    /* padding-top: 20px; Adjust padding-top */
+    /* transition: 0.5s; */
+  /* } */ 
 
   nav ul li {
     display: block;
