--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -3,20 +3,23 @@
   justify-content: center;
   align-items: center;
   height: 90.5vh;
-  margin-top:19px;
+  margin-top:49px;
   background-color: #fff;
 }
 
 .login-container {
   background-color: #ffffff;
   background-image: linear-gradient(315deg, #ffffff 0%, #91a6ff 74%);
-  width: 400px;
+ 
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 10px;
   background-color: #fff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  max-width: 400px;
+  background-image: linear-gradient(315deg, #ffffff 0%, #91a6ff 74%);
+ 
 }
 
 .login-container > input {
