--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 90.5vh;
+  margin-top: 52px;
 }
 .signup-container {
   max-width: 400px;
