--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,161 +1,99 @@
-body{
-	line-height: 1.5;
-	font-family: 'Poppins', sans-serif;
-}
-*{
-	margin:0;
-	padding:0;
-	box-sizing: border-box;
-}
-
 .footer {
   background-color: #212EA0;
-  width:100%;
-  padding:20px; 
+  width: 100%;
+  padding: 20px;
+  overflow: hidden;
 }
 
-.grid-container{
-  display:grid;
-  color:#fff;
-}
-
-.row{
-  display:flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  letter-spacing: 0.5px,        
-}
-
-.footer-col{
-  width:25%;
-  padding: 0 5px;
-}
-
-.copyright {
-  margin-top: 50px; 
-  color:#fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.needHelpCss{
-  font-size: 16px;
-  margin-bottom: 60px;
-}
-
-.companyCss{
-  font-size: 16px;
-   margin-bottom: 60px;
-}
-
-.moreInfoCss{
-font-size: 16px;
-margin-bottom: 85px;
-}
-
-.socialSitesCss{
-font-size: 16px;
-margin-bottom: 130px;
-}
-
-.footer-col a {
+.grid-container {
+  display: grid;
   color: #fff;
-  text-decoration: none;
-  position: relative;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  gap: 20px;
+  letter-spacing: 0.5px;
+
+}
+
+.footer-col {
+  width: 200px;
+  height: 200px;
+  margin: 10px;
+}
+
+.footer-title {
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.footer-links div {
+  margin-top: 10px;
+  color:lightgrey;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: space-around;
+  width: fit-content;
+  gap: 1.9rem;
+}
+
+.social-icons div a {
+  color: #fff;
+  font-size: 20px;
   transition: color 0.5s ease, transform 0.5s ease;
 }
 
-.footer-col a:hover::after {
-  width: 100%;
-  left: 0;
-}
-.footer-col a:hover {
-  /* color: #8d8de1; */
-  text-decoration: none;
-  transform: scale(1.1); 
-
-}
-.footer-col a i {
-  font-size: 16px;
-  transition: color 0.5s ease, font-size 0.5s ease;
-}
-.socialSitesCss {
-  font-size: 16px;
-  margin-bottom: 130px;
-  height: 70px; 
-}
-.footer-col a:hover i {
-  /* color: #8d8de1; */
-  /* transform: scale(1.1); */
-  font-size: 20px;
+.social-icons div a i:hover {
+  transform: scale(1.1);
 }
 
-@media (min-width:523px) and (max-width:846px){
-  .footer-col{
-     width:50%;
-   } 
-   .needHelpCss{
-     margin-bottom:5px;   
-   }
-  .companyCss{
-   margin-bottom:0px;
-   margin-top:0px;
-  }
-  .moreInfoCss{
-  font-size: 16px;
+.copyright {
   margin-top: 20px;
+  color: #fff;
+  text-align: center;
+}
+
+
+@media (max-width: 768px) {
+  .row {
+    justify-content: space-evenly;
+    align-items: center;
   }
-  .socialSitesCss{
-    margin-top:20px;
-    }
-  .copyright {
-    font-size: 14px;
-    margin-top: 10px; 
-    display: flex;
-    justify-content: center;
-  }
-  }
-  
-  @media (min-width:523px) and (max-width:596px) {
-  .needHelpCss{
-     font-size: 14px;
-   }
-   .companyCss{
-    font-size: 14px;
-    margin-top: 0px;
-   }
-   .moreInfoCss{
-    font-size: 14px;
-   }
-   .socialSitesCss{
-    font-size: 14px;
-   }
-  }
-  
-  @media (min-width:850px) and (max-width:1107px){
-    .footer-col{
-     width:30%;  
-   } 
-  .needHelpCss{
-     font-size: 14px;
-     margin-bottom: 65px;
-   }
-   .companyCss{
-    font-size: 14px;
-    margin-bottom:60px;
-   }
-   .moreInfoCss{
-    font-size: 14px;
-    margin-bottom: 90px;
-   }
-    .socialSitesCss{
-    font-size: 14px;
-    margin-top:0px;
+
+  .footer-col {
+    flex-basis: 1;
+    max-width: 200px;
     margin-bottom: 20px;
-    }
-    .copyright{
-      margin-top: 0px;
-    }
   }
+
+  .social-icons {
+    justify-content: space-between;
+  }
+}
+@media (max-width: 550px){
+  .footer-col{
+    height: auto;
+  }
+}
+
+@media (max-width: 480px) {
+  .footer-title {
+    font-size: 18px;
+  }
+  .row{
+    flex-direction: column;   
+  }
+  .footer-col{
+    height: auto;
+  }
+  .social-icons div a {
+    font-size: 18px;
+  }
+}
