--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -28,8 +28,12 @@ body{
 }
 
 .footer-col{
-  width:25%;
-  padding: 0 5px;
+  /* width:25%;
+  padding: 0 5px; */
+  flex: 1;
+  padding: 0 10px;
+  min-width: 220px;
+  margin-bottom: 20px;
 }
 
 .copyright {
