restore the package.json changes

--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -11,6 +11,7 @@
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 10px;
+  /*background-color: #f9f9f9;*/
   background-color: #ffffff;
   background-image: linear-gradient(315deg, #ffffff 0%, #91a6ff 74%);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
