Added Dark Mode Toggle
Signed-off-by: Hack2Health <hemashree21.msh@gmail.com>

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -9,6 +9,15 @@
   color: #fff;
 }
 
+#dark .footer {
+  background-color: rgb(34, 34, 34);
+  border: none;
+}
+
+#dark a {
+  color: white;
+}
+
 .row {
   display: flex;
   flex-wrap: wrap;
