--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -11,6 +11,7 @@
   color: #676767;
 }
 
+
 #dark .send {
   color: blue;
 }
@@ -48,7 +49,7 @@
 .contact form input,
 .contact form textarea {
   display: block;
-  width: 100%;
+  width: 90%;
   background: #ebebeb;
   padding: 15px;
   border: 0;
@@ -85,6 +86,9 @@
   padding-left: 40px;
   padding-right: 40px;
 }
+/* input{
+  width:70vw;
+} */
 
 /* Media query for Smart Phone */
 @media (max-width: 600px) {
@@ -123,7 +127,7 @@
   .contact form textarea {
     padding: 10px;
     font-size: 18px;
-    width: 350px;
+    /* width: 350px; */
   }
 
   /* .contact-col button {
@@ -138,4 +142,6 @@
   .contact-col form input, .contact-col form textarea{
     width: 80vw;
     }
+ 
+   
 }
