--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -13,7 +13,7 @@
 
 @keyframes animate{
     0%,100%{
-        background-image: url('../../assets/investors.jpeg');
+        background-image: url('../../assets/nile_3.jpg');
     }
     25%{
         background-image: url('../../assets/5.jpg');
@@ -22,7 +22,7 @@
         background-image: url('../../assets/2.jpg');
     }
     75%{
-        background-image: url('../../assets/3.jpg');
+        background-image: url('../../assets/nile_2.jpg');
     }
 }
 .hero-text{
