The UI is now sorted and completed

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,8 +1,8 @@
 .hero{
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(rgba(8, 0, 58, 0.7), rgba(8, 0, 58, 0.7)), url('../../assets/investors.jpeg');
-    background-size: cover;
+    background: linear-gradient(rgba(8, 0, 58, 0.7), rgba(8, 0, 58, 0.7)), url('../../assets/investors.png');
+    background-size:cover;
     background-position: center;
     color: #fff;
     display: flex;
@@ -13,7 +13,6 @@
     text-align: center;
     max-width: 800px;
 }
-
 .hero-text h1{
     font-size: 60px;
     font-weight: 600;
@@ -21,13 +20,11 @@
     text-align: center;
     width: fit-content;
 }
-
 .hero-text p{
     max-width: 700px;
     margin: 10px auto 20px;
     line-height: 1.4;
 }
-
 .hero-text button{
     width: 40%;
 }
