--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,3 +1,7 @@
+.container1{
+  padding-left: 10%;
+  padding-right: 10%;
+}
 nav{
     width: 100%;
      background: rgba(0, 0, 128,.6);
@@ -11,7 +15,6 @@ nav{
     justify-content: space-between;
     z-index: 10;
 }
-
 .logo{
     width: 80px;
 }
