added the  hover in the footer

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: #212EA0;
   width: 100%;
-  padding: 10px 0; /* Add padding to provide some space around the footer */
+  padding: 10px 0; 
 }
 
 .grid-container {
@@ -17,7 +17,7 @@
 #dark a {
   color: white;
 }
-
+/* Added the hover in this footer section */
  .needHelpCss a:hover, .foot:hover,.companyCss a:hover, .moreInfoCss a:hover {
   color:rgb(13, 168, 171); 
 }
