--- a/src/Components/ChatAssistant/ChatAssistant.css
+++ b/src/Components/ChatAssistant/ChatAssistant.css
@@ -9,45 +9,58 @@
   flex-direction: column;
   align-items: flex-end;
 }
+
 .chatbot-scroll {
   ::-webkit-scrollbar {
-    width: 8px; /* Width of the scrollbar */
+    width: 8px;
+    /* Width of the scrollbar */
   }
 
   ::-webkit-scrollbar-track {
-    background: #f1f1f1; /* Color of the track */
+    background: #f1f1f1;
+    /* Color of the track */
   }
 
   ::-webkit-scrollbar-thumb {
-    background: #007bff; /* Color of the thumb */
-    border-radius: 6px; /* Roundness of the thumb */
+    background: #007bff;
+    /* Color of the thumb */
+    border-radius: 6px;
+    /* Roundness of the thumb */
   }
 }
 
 .react-chatbot-kit-chat-input {
   outline: none;
 }
-.react-chatbot-kit-chat-message-container{
+
+.react-chatbot-kit-chat-message-container {
   overflow-x: hidden;
   padding: 0.5px 5px 25px 5.5px;
   /* height: 455px; */
 }
+
 .react-chatbot-kit-user-chat-message {
   padding: 15px;
   margin-right: 9px;
 }
-.react-chatbot-kit-chat-input-form{
-  margin:3px 10px;
-  position:fixed;
+
+.react-chatbot-kit-chat-input-form {
+  margin: 3px 10px;
+  position: fixed;
   bottom: 2px;
-  width:auto;
+  width: auto;
 }
+
 .react-chatbot-kit-chat-inner-container {
-  background-color:white;
+  background-color: white;
 }
+
 .react-chatbot-kit-chat-container {
   width: 350px;
+  border: 2px solid blue;
+  border-radius: 5px;
 }
+
 .react-chatbot-kit-chat-bot-message {
   margin-left: 10px;
 }
@@ -55,33 +68,38 @@
 .react-chatbot-kit-chat-header {
   background-color: rgb(153, 189, 230);
 }
+
 .react-chatbot-kit-chat-bot-message {
   background-color: #2977f5;
   color: #f1f1f1;
 }
 
 .react-chatbot-kit-chat-bot-message-arrow {
-  border-right: 8px solid #007bff ;
+  border-right: 8px solid #007bff;
 }
 
 .react-chatbot-kit-chat-btn-send {
-  background-color:#007bff;
+  background-color: #007bff;
   height: 43px;
   width: 90px;
   margin: 0px 10px;
 }
+
 .Logo {
+  cursor: pointer;
   height: 50px;
   width: 50px;
   border-radius: 50px;
   right: 12px;
 }
+
 .Avatar {
   height: 50px;
   width: 50px;
   border-radius: 50px;
   margin-bottom: 30px;
 }
+
 .userAvatar {
   height: 50px;
   width: 50px;
@@ -101,17 +119,18 @@
 }
 
 .chatbot-container {
-  /* width: 300px; */
-  /* height: 400px; */
+  width: 350px;
+  overflow: hidden;
+  /* Hide overflow content */
   transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
   transform: translateY(100%);
   opacity: 0;
-  pointer-events: none; /* Prevent interaction when hidden */
+  pointer-events: none;
+  /* Prevent interaction when hidden */
 }
 
 .chatbot-container.open {
   transform: translateY(0);
   opacity: 1;
   margin-bottom: 5px;
-  pointer-events: auto; /* Allow interaction when visible */
-}
+  pointer-events: auto;
