--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -7,7 +7,7 @@
   background-color: #fff;
 }
 
-.login-container {
+/* .login-container {
   background-color: #ffffff;
   background-image: linear-gradient(315deg, #ffffff 0%, #91a6ff 74%);
   width: 400px;
@@ -17,9 +17,9 @@
   border-radius: 20px;
   background-color: #fff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+} */
 
-.login-container > input {
+/* .login-container > input {
   outline: none;
 }
 
@@ -89,4 +89,4 @@ p a:hover {
   margin-bottom: 10px;
   /* justify-content: center;
   display: flex; */
-}
+} */
