--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -23,6 +23,9 @@ background-color: transparent;
 .logIn:hover{
 background-color: rgb(109, 65, 151);
 }
+
+/*button hover*/
+
 nav ul li{
   display: inline-block;
   list-style: none;
@@ -32,6 +35,68 @@ nav ul li{
 nav ul li a.active{
   color: lightgoldenrodyellow;
 }
+nav ul li a:hover{
+  text-decoration: none;
+}
+nav ul li a {
+  position: relative;
+  text-decoration: none;
+  
+  
+  transition: all 0.3s ease-in-out;
+}
+nav ul li a:before {
+  content: "";
+  position: absolute;
+  
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #c266d3;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+nav ul li a:hover {
+  color: #c266d3;
+}
+
+nav ul li a:hover:before {
+  transform: scaleX(1);
+}
+
+
+
+/*button*/
+.button {
+  width: 100px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: center;
+  color: #000;
+ 
+  font-weight: 600;
+  
+  cursor: pointer;
+  display: inline-block;
+}
+.button-2 {
+  color: #fff;
+  border: 3px solid #c266d3;
+  background-image: -webkit-linear-gradient(30deg, #c266d3 50%, transparent 50%);
+  background-image: linear-gradient(30deg, #c266d3 50%, transparent 50%);
+  background-size: 500px;
+  background-repeat: no-repeat;
+  background-position: 0%;
+  -webkit-transition: background 300ms ease-in-out;
+  transition: background 300ms ease-in-out;
+}
+.button-2:hover {
+  background-position: 100%;
+  color: #c266d3;
+}
+
 .dark-nav{
   background: #212EA0;
   transition: 0.5s;
@@ -43,6 +108,7 @@ nav ul li a.active{
 .menu-icon{
   display: none;
 }
+
 
 
 /* Media query for tablets */
@@ -59,6 +125,7 @@ nav ul li {
   font-size: 14px;
 } 
 }
+
 
 
 /* SmartPhone Media query */
