--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -30,7 +30,7 @@
 }
 
 .footer-2 {
-  width: 20%;
+  width: 25%;
 }
 
 .footer-title {
@@ -92,6 +92,7 @@
   display: flex;
   justify-content: center;
   font-size: 0.875rem;
+  margin-top: 1rem;
 }
 
 .footer-bottom-link {
