--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -20,8 +20,10 @@ nav.container1 p {
     
     color: #edf2f2;
     position: absolute;
-    right: 65vw;
-    font-size: xx-large;
+    right: 60.5vw;
+    top: 0.3vw; 
+    font-size: 39px;
+  
 }
  /* CSS for name in navbar */
 /*  .name_nav {
