--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #header {
     text-align: center;
-    color: #212EA0;
+    /* color: #212EA0; */
     font-size: 23px;
     font-weight: 600;
     padding-top: 60px;
@@ -15,11 +15,31 @@
     overflow-x: hidden;
 }
 
-#light {
-    background-color: white;
+.header-light{
+    /* background-color: #FFFFFF; */
+    background-color: rgb(84,114,228) !important;
+    border-color: #D8DADF !important;
+    color: #11131f !important;
 }
+.header-dark{
+    background-color:#11131f !important;
+    border-color: #2D3135 !important;
+    color: #FFFFFF !important;
 
-#dark {
-    background-color: black;
-    color: white;
+}
+.cardTheme-dark{
+    background-color: rgb(24,25,27) !important;
+    border-color: #2D3135 !important;
+    color: white !important;
+}
+.light {
+    background-color: #FFFFFF !important;
+    border-color: #D8DADF !important;
+    color: #141726 !important;
+}
+    
+.dark {
+    background-color:#141726 !important;
+    border-color: #2D3135 !important;
+    color: white !important;
 }
