--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -8,16 +8,9 @@
 
 .contact-col {
   flex-basis: 48%;
-  color: #676767;
-}
-
-
-#dark .send {
-  color: blue;
 }
 
 .contact-col h3 {
-  color: #000f38;
   font-weight: 500;
   font-size: 25px;
   display: flex;
@@ -50,7 +43,7 @@
 .contact form textarea {
   display: block;
   width: 90%;
-  background: #ebebeb;
+  /* background: #ebebeb; */
   padding: 15px;
   border: 0;
   outline: 0;
@@ -112,7 +105,7 @@
     /* background-color: black; */
   }
   .contact-right form {
-    background-color: red;
+    /* background-color: red; */
     display: flex;
     flex-direction: column;
     text-align: left;
