--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -4,11 +4,11 @@
 }
 nav{
   width: 100%;
-   background: rgba(0, 0, 128,.6);
-  color: #fff;
+  /* background: rgba(0, 0, 128,.6); */
   padding: 4px 0;
   position: fixed;
   top: 0;
+  border-bottom: 2px solid white;
   left: 0;
   display: flex;
   align-items: center;
@@ -20,7 +20,7 @@ nav{
   width: 80px;
 }
 .logIn{
-/*background-color: rgb(145, 99, 187);*/
+/* background-color: rgb(145, 99, 187); */
 background-color: transparent;
 }
 .logIn:hover{
@@ -36,7 +36,7 @@ nav ul li a.active{
   color: lightgoldenrodyellow;
 }
 .dark-nav{
-  background: #212EA0;
+  /* background: #212EA0; */
   transition: 0.5s;
 }
 .hidden-nav {
@@ -76,7 +76,7 @@ nav ul li {
     position: absolute; /* Change position to absolute */
     top: 82.56px; /* Adjust top position */
     right: 0px; /* Adjust right position */
-    background: #6261acfa;
+    /* background: #6261acfa; */
     z-index: 10; /* Increase z-index to show above other content */
     width: 200px;
     padding-top: 20px; /* Adjust padding-top */
@@ -103,15 +103,23 @@ nav ul li {
   }
 }
 .theme-toggle-button {
-  background: rgba(128, 128, 128, 0.2); /* Subtle grey background */
+  /* background: rgba(128, 128, 128, 0.2); Subtle grey background */
+  height: 42px;
+  width: 42px;
   border: none; /* Remove border */
   border-radius: 50%;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 8px; /* Increase padding for larger button */
+  padding: 0; /* Increase padding for larger button */
   transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
+}
+.theme-toggle-button img{
+  height: 42px;
+  width: 42px;
+  filter: grayscale();
+  border-radius: 20px;
 }
 
 .theme-toggle-button:hover {
