--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -92,8 +92,8 @@ nav ul li a:hover:before {
   background-size: 500px;
   background-repeat: no-repeat;
   background-position: 0%;
-  -webkit-transition: background 300ms ease-in-out;
-  transition: background 300ms ease-in-out;
+  -webkit-transition:  300ms ease-in-out;
+  transition:  300ms ease-in-out;
 }
 .button-2:hover {
   background-position: 100%;
@@ -178,7 +178,7 @@ nav ul li {
   align-items: center;
   justify-content: center;
   padding: 8px; /* Increase padding for larger button */
-  transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
+  transition: transform 0.3s, box-shadow 0.3s, 0.3s;
 }
 
 .theme-toggle-button:hover {
